fix: apply code quality and bug fixes
Code quality (Phase 3):
- Fix modifier order: final static -> static final in FASTACorrector
- Remove debug main() methods from 6 files (SequenceAnalizer, GenBank, RNAFoldInterface, UShuffle, AboutFrame, ProxyFrame)
- Remove TODO stubs from GUIFrame (19) and Generic (1)
- Remove profanity and unprofessional comments from SequenceAnalizer
- Remove commented-out code blocks across StemLoop, SequenceAnalizer, GenBank
- Resolve wildcard imports in RNAFoldInterface, UShuffle

Bug fixes:
- Fix idSeq double-concatenation in LoopMatcherThread (was appending same ID twice)
- Remove dead idSeq == null branch in LoopMatcherThread
- Fix non-portable shell command in OSValidator

Naming conventions (Phase 4):
- Rename StemLoop fields/methods: id_fasta->idFasta, percent_AG->percentAg, etc.
- Rename LoopMatcherThread: getMUTEX()->getMutex(), getSEM()->getSem()
- Rename GenBank: getPROXY_FILE()->getProxyFileName(), add final to HEADER